tests/baselines/reference/checkInheritedProperty.errors.txt
checkInheritedProperty.ts(7,14): error TS2729: Property 'b' is used before its initialization.


==== checkInheritedProperty.ts (1 errors) ====
    class Base {
    }
    
    declare const BaseFactory: new() => Base & { c: string }
    
    class Derived extends BaseFactory {
        a = this.b
                 ~
!!! error TS2729: Property 'b' is used before its initialization.
!!! related TS2728 checkInheritedProperty.ts:8:5: 'b' is declared here.
        b = "abc"
    }
    